--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,495 @@
-.App {
-  text-align: center;
+/* VARIABLES */
+:root {
+	/* TEXT VARIABLES */
+	--body-font: "Karla", sans-serif;
+	--heading-font: "Markazi Text", serif;
+	--h1-size: 64px;
+	/* --h1-height: 108px; */
+	--h2-size: 40px;
+	/* --h2-height: 65px; */
+	--h3-size: 20px;
+	--h4-size: 18px;
+	/* --h5-size: 28px;
+	--h6-size: 22px; */
+	--p-size: 25px;
+	--p-height: 35px;
+	--secondary-text-size: 16px;
+	--secondary-text-height: 20px;
+	--letter-spacing-sm: 0.25px;
+	--letter-spacing-lg: 12px;
+	--primary-button-size: 20px;
+	--secondary-button-size: 18px;
+	/* --text-shadow-dark: 1px 0 var(--primary-dark), -1px 0 var(--primary-dark),
+		0 1px var(--primary-dark), 0 -1px var(--primary-dark),
+		1px 1px var(--primary-dark), -1px -1px var(--primary-dark),
+		1px -1px var(--primary-dark), -1px 1px var(--primary-dark); */
+
+	/* SPACING VARIABLES*/
+	--spacing-sm: 8px;
+	--spacing-md: 16px;
+	--spacing-lg: 32px;
+	--spacing-xl: 64px;
+	--width-standard: 1144px;
+
+	/* COLOR VARIABLES */
+	--primary-dark: #495e57;
+	--primary-light: #f4ce14;
+	--secondary-bright: #ee9972;
+	--secondary-pale: #fbdabb;
+	--highlight-light: #edefee;
+	--highlight-dark: #333;
+	/* --bg-light: rgba(244, 207, 20, 0.45); */
+	--bg-dark: rgba(51, 51, 51, 0.35);
+
+	/* --primary-button-border: 2px solid #f4ce14; */
+	--border-radius-standard: 8px;
+	--box-shadow-standard: 0px 2px 40px rgba(0, 0, 0, 0.15);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* GENERAL ELEMENT STYLES */
+body {
+	width: 100%;
+	font-family: var(--body-font);
+	color: var(--highlight-dark);
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+code {
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+	font-family: var(--heading-font);
+	font-weight: 600;
+	font-size: var(--h1-size);
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+	font-family: var(--heading-font);
+	font-weight: 400;
+	font-size: var(--h2-size);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3 {
+	font-family: var(--body-font);
+	font-weight: 500;
+	font-size: var(--h3-size);
+	text-transform: uppercase;
+}
+
+h4 {
+	font-family: var(--body-font);
+	font-weight: 600;
+	font-size: var(--h4-size);
+	margin: var(--spacing-md) 0;
+	letter-spacing: var(--letter-spacing-sm);
+}
+
+header {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: var(--spacing-lg) 0;
+}
+
+main {
+	width: 100%;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.section-container {
+	width: 100%;
+	max-width: var(--width-standard);
+}
+
+.cards-container {
+	width: 100%;
+	display: flex;
+	align-items: stretch;
+	justify-content: space-between;
+	box-sizing: border-box;
+}
+
+.two-column {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: flex-start;
+	box-sizing: border-box;
+}
+
+.two-column > .col-left {
+	width: 50%;
+	box-sizing: border-box;
+	padding: 0 var(--spacing-sm) 0 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: start;
+}
+
+.two-column > .col-right {
+	width: 50%;
+	box-sizing: border-box;
+	padding: 0 0 0 var(--spacing-sm);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: start;
+}
+
+.secondary-text {
+	color: var(--primary-dark);
+	font-size: var(--secondary-text-size);
+	line-height: var(--secondary-text-height);
+	letter-spacing: var(--letter-spacing-sm);
+}
+
+/* BUTTON STYLES */
+.primary-button {
+	font-family: var(--body-font);
+	font-size: var(--primary-button-size);
+	font-weight: 800;
+	border-radius: var(--border-radius-standard);
+	border: none;
+	background-color: var(--primary-light);
+	color: var(--highlight-dark);
+	padding: var(--spacing-md) var(--spacing-lg);
+	box-shadow: var(--box-shadow-standard);
+	transition: all 0.25s ease;
+}
+
+.primary-button:hover {
+	transform: translateY(-0.25em);
+	cursor: pointer;
+}
+
+.secondary-button {
+	font-family: var(--body-font);
+	font-size: var(--secondary-button-size);
+	font-weight: 600;
+	padding: 0;
+	border-radius: var(--border-radius-standard);
+	border: none;
+	background-color: transparent;
+	color: var(--highlight-dark);
+	transition: all 0.25s ease;
+}
+
+.secondary-button:hover {
+	opacity: 0.75;
+	cursor: pointer;
+}
+
+.with-icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.with-icon:hover > img {
+	transform: translateX(6px);
+}
+
+.with-icon > img {
+	height: 25px;
+	padding: 0 0 0 var(--spacing-lg);
+	transition: transform 0.25s ease;
+}
+
+/* NAVBAR */
+.navbar {
+	width: 100%;
+	max-width: var(--width-standard);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0;
+	box-sizing: border-box;
+}
+
+.menu {
+	width: 100%;
+	margin: 0 0 0 calc(var(--spacing-xl) * 2);
+	padding: 0;
+	list-style: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.menu a {
+	font-family: var(--body-font);
+	font-size: var(--h3-size);
+	color: var(--primary-dark);
+	font-weight: 700;
+	text-decoration: none;
+	text-transform: uppercase;
+	transition: all 0.25s ease;
+}
+
+.menu a:hover {
+	color: var(--highlight-dark);
+}
+
+/* HERO SECTION */
+.hero {
+	width: 100%;
+	position: relative;
+}
+
+.background {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	box-sizing: border-box;
+	background-color: var(--bg-dark);
+	z-index: 3;
+}
+
+.background > img {
+	width: 100vw;
+	max-height: 90vh;
+	object-fit: cover;
+	z-index: -1;
+}
+
+.hero-intro {
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.hero h1 {
+	color: var(--primary-light);
+	margin: 0;
+}
+
+.hero h2 {
+	color: var(--highlight-light);
+	margin: 0;
+}
+
+.hero p {
+	color: var(--highlight-light);
+	font-size: var(--p-size);
+	line-height: var(--p-height);
+}
+
+/* SPECIALS SECTION */
+.specials {
+	margin: var(--spacing-xl) 0 calc(var(--spacing-xl) * 2) 0;
+}
+
+.specials-wrapper {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.dish-card {
+	box-shadow: var(--box-shadow-standard);
+	width: 30%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
+	background-color: var(--highlight-light);
+	border-radius: var(--border-radius-standard);
+	box-sizing: border-box;
+}
+
+.dish-card > img {
+	width: 100%;
+	border-top-left-radius: inherit;
+	border-top-right-radius: inherit;
+}
+
+.dish-card-heading {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: var(--spacing-lg) 0 var(--spacing-md) 0;
+}
+
+.dish-card h4 {
+	margin: 0;
+}
+
+.dish-card-heading span {
+	color: var(--secondary-bright);
+	font-weight: 600;
+	font-size: var(--secondary-text-size);
+}
+
+.dish-card p {
+	text-align: justify;
+	line-height: var(--secondary-text-height);
+	margin: var(--spacing-md) 0 var(--spacing-lg) 0;
+}
+
+.dish-card-text {
+	padding: 0 var(--spacing-md) 0 var(--spacing-md);
+	margin: 0;
+	box-sizing: border-box;
+	width: 100%;
+}
+
+.dish-card .with-icon {
+	margin-top: auto;
+	padding: 0 var(--spacing-md) var(--spacing-lg) var(--spacing-md);
+}
+
+/* TESTIMONIALS SECTION */
+.testimonials {
+	width: 100%;
+	background-color: var(--primary-light);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: var(--spacing-lg) 0 calc(var(--spacing-xl) * 3) 0;
+}
+
+.testimonials-wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.rating-card {
+	width: 24%;
+	background-color: var(--highlight-light);
+	box-shadow: var(--box-shadow-standard);
+	border-radius: var(--border-radius-standard);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	transition: transform 0.2s;
+	box-sizing: border-box;
+	padding: var(--spacing-md);
+}
+
+.rating-card:hover {
+	transform: translateY(-1rem);
+}
+
+.rating-card .two-column {
+	margin: 0 0 var(--spacing-md) 0;
+}
+
+.rating-card span {
+	margin: auto 0 0 0;
+	letter-spacing: var(--letter-spacing-lg);
+	color: var(--primary-dark);
+}
+
+.rating-card p {
+	margin: 0;
+}
+
+.rating-card img {
+	object-fit: cover;
+	max-height: 105px;
+}
+
+/* ABOUT SECTION */
+
+.about {
+	box-sizing: border-box;
+	width: 100%;
+	padding: var(--spacing-xl) 0;
+}
+
+.two-column.about {
+	align-items: center;
+}
+
+.about .col-left {
+	padding-right: var(--spacing-xl);
+}
+
+.about img {
+	width: 100%;
+	border-radius: var(--border-radius-standard);
+	max-height: 750px;
+	object-fit: cover;
+}
+
+.about h1 {
+	color: var(--primary-dark);
+	margin: 0;
+}
+
+.about h2 {
+	margin: 0 0 var(--spacing-lg);
+}
+
+.about p {
+	font-size: var(--p-size);
+	line-height: var(--p-height);
+	text-align: justify;
+}
+
+/* FOOTER */
+footer {
+	width: 100%;
+	background-color: var(--highlight-dark);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: var(--spacing-xl) 0;
+}
+
+footer h3 {
+	color: var(--primary-light);
+}
+
+footer li,
+footer a {
+	color: var(--highlight-light);
+	line-height: var(--secondary-text-height);
+	margin: 0 0 var(--spacing-sm) 0;
+	display: block;
+}
+
+footer a {
+	text-decoration: none;
+	transition: all 0.25s ease;
+}
+
+footer a:hover {
+	text-decoration: underline;
+}
+
+.contact {
+	list-style: none;
+	padding: 0;
+}
+
+.footer-wrapper {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
 }
