--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,6 @@ h3 {
 	font-family: var(--body-font);
 	font-weight: 500;
 	font-size: var(--h3-size);
-	text-transform: uppercase;
 }
 
 h4 {
@@ -130,7 +129,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: start;
+	align-items: flex-start;
 }
 
 .two-column > .col-right {
@@ -140,7 +139,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: start;
+	align-items: flex-start;
 }
 
 .secondary-text {
@@ -229,12 +228,14 @@ main {
 	color: var(--primary-dark);
 	font-weight: 700;
 	text-decoration: none;
-	text-transform: uppercase;
 	transition: all 0.25s ease;
+	padding: var(--spacing-sm) var(--spacing-md);
 }
 
 .menu a:hover {
-	color: var(--highlight-dark);
+	background-color: var(--primary-dark);
+	color: var(--highlight-light);
+	border-radius: var(--border-radius-standard);
 }
 
 /* HERO SECTION */
@@ -411,10 +412,19 @@ main {
 .about {
 	box-sizing: border-box;
 	width: 100%;
-	padding: var(--spacing-xl) 0;
+	background-color: var(--primary-dark);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	color: var(--highlight-light);
+	padding: var(--spacing-lg) 0;
 }
 
-.two-column.about {
+.about-wrapper {
+	width: 100%;
+	display: flex;
+	justify-content: center;
 	align-items: center;
 }
 
@@ -425,12 +435,12 @@ main {
 .about img {
 	width: 100%;
 	border-radius: var(--border-radius-standard);
-	max-height: 750px;
+	max-height: 730px;
 	object-fit: cover;
 }
 
 .about h1 {
-	color: var(--primary-dark);
+	color: var(--primary-light);
 	margin: 0;
 }
 
@@ -442,6 +452,63 @@ main {
 	font-size: var(--p-size);
 	line-height: var(--p-height);
 	text-align: justify;
+}
+
+/* RESERVATIONS SECTION */
+.reservations {
+	width: 100%;
+	background-color: var(--primary-dark);
+	color: var(--highlight-light);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 0 0 var(--spacing-xl) 0;
+}
+
+.reservations .two-column {
+	margin: 0 0 var(--spacing-lg) 0;
+}
+
+.reservations h1 {
+	color: var(--primary-light);
+	margin: var(--spacing-xl) 0 0 0;
+}
+
+.footnote {
+	font-style: italic;
+	margin: 0 0 var(--spacing-xl) 0;
+}
+
+.reservations label {
+	font-size: var(--h3-size);
+}
+
+.reservations label:after {
+	content: " *";
+	color: var(--secondary-bright);
+}
+
+.reservations input[type="date"],
+.reservations input[type="number"],
+.reservations select {
+	box-sizing: border-box;
+	padding: 0 var(--spacing-sm);
+	margin: var(--spacing-sm) 0 0 0;
+	border-radius: var(--border-radius-standard);
+	font-family: inherit;
+	font-size: 100%;
+	width: 100%;
+	height: 60px;
+}
+
+.reservations input[type="submit"] {
+	width: 100%;
+}
+
+.reservations span,
+.confirm span {
+	color: var(--secondary-bright);
 }
 
 /* FOOTER */
